# PHT-Eigentrust

./: evaluation_architecture.drawio  evaluation_architecture2.drawio
results/: baseline.csv  baseline.json  beta1.csv  individual_forking.csv  individual_forking_5.csv  individual_forking_5_1.csv  individual_forking_random.csv  large_run.csv  malicious_collectives_5.csv  malicious_collectives_omniscient.csv  malicious_collectives_random.csv  malicious_collectives_self_weighting.csv  self_weighting_5.csv  self_weighting_random.csv
simulation/: CMakeLists.txt  README.md  main.cpp
simulation/basic_impl/: BaselinePeers.cpp  BaselinePeers.h  CMakeLists.txt  CalculationStrategy.cpp  CalculationStrategy.h  ConcreteSimpleExecution.cpp  ConcreteSimpleExecution.fwd.h  ConcreteSimpleExecution.h  ConcreteSimpleExecutionCycle.cpp  ConcreteSimpleExecutionCycle.h  ConfigurableTrainUser.cpp  ConfigurableTrainUser.h  JSONReporter.cpp  JSONReporter.h  PeerFactory.cpp  PeerFactory.fwd.h  PeerFactory.h  Peers.cpp  Peers.fwd.h  Peers.h  RateHelper.cpp  RateHelper.h  ResultPeers.cpp  ResultPeers.fwd.h  ResultPeers.h  ThreatModels.cpp  ThreatModels.fwd.h  ThreatModels.h
simulation/basic_impl/json/: CMakeLists.txt  json.cpp
simulation/lib/: Abstracts.cpp  Abstracts.fwd.h  Abstracts.h  CMakeLists.txt  NetworkAnalyser.cpp  NetworkAnalyser.fwd.h  NetworkAnalyser.h  PeerCollection.cpp  PeerCollection.fwd.h  PeerCollection.h  Simulation.cpp  Simulation.h  SimulationReporter.cpp  SimulationReporter.fwd.h  SimulationReporter.h  custom_sorting.h  types.h
visualiser/: visualiser.py
